# python dependencies
[tool.poetry]
name = "starwars_api"
version = "0.0.1"
description = "REST API with StarWars movies information"
authors = ["Samuel Sampaio <samukasmk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11.3"
### flask requirements
gunicorn = "^20.1.0"
dynaconf = "^3.1.12"
pymongo = "^4.3.3"
mongoengine = "^0.27.0"
marshmallow = "^3.19.0"
marshmallow-mongoengine = "^0.31.2"
click = "^8.1.3"
apispec = "^6.3.0"
### flask integrations
flask = "^2.3.2"
flask-apispec = "^0.11.4"
flask-mongoengine = "^1.0.0"
flask-restful = "^0.3.10 "
flask-marshmallow = "^0.15.0"

[tool.poetry.group.dev.dependencies]
### dev tools
ipython = "*"
### formatters
isort = "^5.12.0"
black = "^23.3.0"
### linters
pylama = "^8.4.1"
pyflakes = "^3.0.1"
pylint = "2.17.4"
pycodestyle = "2.10.0"
radon = "^6.0.1"
mccabe = "^0.7.0"
mypy = "^1.3.0"
mypy-extensions = "^1.0.0"
### unit tests
coverage = "^7.2.7"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pytest-mock = "*"
pytest-mypy = "^0.10.3"
pytest-flask = "^1.2.0"
pytest-bandit = "*"
pytest-pylint = "0.19.0"
### security checkers
bandit = "^1.7.5"
pip_audit = "^2.5.6"
pip-check = "^2.8.1"
safety = "^2.3.5"


# unit tests
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--pylama --mypy --bandit -v -v --tb=long --cache-clear"
python_files = ["test_*.py"]
testpaths = [
    "app",
    "tests"
]
filterwarnings = [
    "ignore::pytest.PytestDeprecationWarning",
    "ignore::pytest.PytestWarning"
]


# linters checkers
[tool.mypy]
ignore_missing_imports = true

[tool.pylama]
ignore = "E305,C0114"
format = "pylint"
skip = "test_*,.git,.poetry-venv,*/__pycache__/*,*/.pytest_cache/*,*/.tox/*,*/.env/*"
linters = "pyflakes,pylint,pycodestyle,radon,isort"

[tool.pylama.linter.pylint]
max_line_length = 120

[tool.pylama.linter.pycodestyle]
max_line_length = 120


# cyclomatic complexity checkers
[tool.pylama.linter.mccabe]
max-complexity = 10

[tool.pylama.linter.radon]
exclude = "test_*.py"
cc_min = "B"


# file formaters
[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120
skip_gitignore = true

[tool.black]
line_length = 120
extend-exclude = "(scripts/* | .git/* | .poetry-venv/* | */__pycache__/* | */.pytest_cache/* | */.tox/* | */.env/*)"
